--- a/BirdWatcher.Web_StartProject/wwwroot/start.html
+++ b/BirdWatcher.Web_StartProject/wwwroot/start.html
@@ -15,7 +15,10 @@
     <h3>show all observatíons</h3>
     <button onclick="displayObservations()" id="display">ok</button>
     <h3>all observations</h3>
-    <div id="tabell"></div>
+
+    <ol id="listan">
+    </ol>
+
 
     <button onclick="recreateDatabase()" id="recreateButton">Recreate database</button>
 
